- add parsing text - fix bug ( show overflow-x on lesson page )

--- a/dest/css/main.css
+++ b/dest/css/main.css
@@ -1663,6 +1663,7 @@ select {
 
 .lesson__video {
   position: relative;
+  overflow-x: hidden;
   background: #000; }
 
 .lesson__video_wrap {
