--- a/src/scss/pages/_lesson.scss
+++ b/src/scss/pages/_lesson.scss
@@ -1,5 +1,6 @@
 .lesson__video {
     position: relative;
+    overflow-x: hidden;
     background: #000;
 }
 
